Update homebrew packages

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -22,32 +22,21 @@ homebrew_installed_packages:
   - docker-machine
   - gettext
   - git
+  - hub
   - go
   - gpg
-  - hub
-  - httpie
-  - iperf
-  - libdvdcss
-  - libevent
   - packer
   - python
   - sqlite
-  - mcrypt
   - mysql
+  - redis
   - npm
   - nvm
-  - php56
-  - php56-mcrypt
-  - php56-xdebug
   - ssh-copy-id
-  - cowsay
-  - ios-sim
   - readline
-  - subversion
-  - kdiff3
   - openssl
-  - pv
-  - drush
+  - tree
+  - httpie
   - wget
   - wrk
   - brew-cask
@@ -61,29 +50,17 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - adium
-  - bettertouchtool
-  - google-chrome
-  - dropbox
-  - fing
   - firefox
-  - handbrake
-  - karabiner
-  - limechat
-  - licecap
-  - macvim
-  - menumeters
-  - nvalt
-  - sequel-pro
+  - google-chrome
   - skype
-  - skitch
-  - seil
-  - sublime-text # Note - Sublime Text 2 only, at this time...
-  - textmate
-  - timemachineeditor
-  - tower
-  - transmit
+  - slack
+  - screenhero
+  - github-desktop
+  - atom
+  - phpstorm
+  - pycharm
+  - dropbox
   - vagrant
-  - vagrant-manager
-  - vlc
   - virtualbox
+  - sequel-pro
+  - evernote
